--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,8 @@
             <nav>
                 <ul class="space-y-2">
                     <li><a href="/" class="block px-4 py-2 rounded hover:bg-gray-200">🏠 Home</a></li>
-                    <li><a href="/category/list/" class="block px-4 py-2 rounded hover:bg-gray-200">💳 My Expenses</a></li>
+                    <li><a href="/expense/" class="block px-4 py-2 rounded hover:bg-gray-200">💳 My Expenses</a></li>
+                    <li><a href="/category/list/" class="block px-4 py-2 rounded hover:bg-gray-200">🍱 Expenses Category</a></li>
                     <li><a href="/expense_group/create/" class="block px-4 py-2 rounded hover:bg-gray-200">👥 Expense Groups</a></li>
                     <li><a href="/settlement/create/" class="block px-4 py-2 rounded hover:bg-gray-200">🤝 Settlements</a></li>
                 </ul>
