--- a/templates/expense_create.html
+++ b/templates/expense_create.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Expense</title>
-</head>
+{% extends 'base.html' %}
+
+{% load tailwind_filters %}
+{% block content %}
 <body>
     <h1>Create Expense</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit">Submit</button>
     </form>
 </body>
-</html>
+{% endblock %}
