--- a/templates/expense_list.html
+++ b/templates/expense_list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense List</title>
-</head>
+{% extends 'base.html' %}
+
+{% block content %}
 <body>
     <h1>Expense List</h1>
     <ul>
@@ -18,4 +14,4 @@
         {% endfor %}
     </ul>
 </body>
-</html>
+{% endblock %}
