--- a/templates/register.html
+++ b/templates/register.html
@@ -14,61 +14,27 @@
     </style>
 </head>
 <body class="body-bg min-h-screen flex flex-col justify-center items-center font-sans">
-
     <header class="mb-8">
         <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold text-white">Expense-Sharing-App</h1>
     </header>
-
-    <main class="bg-white max-w-md w-full p-8 md:p-12 rounded-lg shadow-2xl">
+    <main class="bg-white w-full md:max-w-2xl p-5 rounded-lg shadow-lg">
         <section>
             <h2 class="text-2xl font-bold text-gray-800 mb-4">Register</h2>
             <p class="text-gray-600">Create your account.</p>
         </section>
-
-        <section class="mt-8">
-            <form class="space-y-6" method="POST">
-                {% csrf_token %}
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="first_name">First Name</label>
-                        <input type="text" id="first_name" name="first_name" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="middle_name">Middle Name</label>
-                        <input type="text" id="middle_name" name="middle_name" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="last_name">Last Name</label>
-                        <input type="text" id="last_name" name="last_name" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="email">Email Address</label>
-                        <input type="email" id="email" name="email" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="phone_no">Phone No</label>
-                        <input type="text" id="phone_no" name="phone_no" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="role">Role</label>
-                        <select id="role" name="role" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                            <option value="Admin">Admin</option>
-                            <!-- Add more options if needed -->
-                        </select>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 text-sm font-bold" for="password">Password</label>
-                        <input type="password" id="password" name="password" class="block w-full bg-gray-200 rounded-md text-gray-800 border-2 focus:outline-none focus:border-purple-600 transition duration-500 px-4 py-2">
-                    </div>
+        <section class="mt-4">
+            <form class="space-y-4" method="POST">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    {% load tailwind_filters %}
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 md:py-3 md:px-6 rounded-md shadow-lg hover:shadow-xl transition duration-200 w-full" type="submit">Register</button>
                 </div>
-                <button class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 rounded-md shadow-lg hover:shadow-xl transition duration-200 w-full" type="submit">Register</button>
             </form>
         </section>
     </main>
-
-    <div class="max-w-md mt-8 text-center text-white">
+    <div class="max-w-sm mt-4 text-center text-white">
         <p>Already have an account? <a href="/" class="font-bold hover:underline">Sign in</a>.</p>
     </div>
-
 </body>
 </html>
