--- a/templates/settlement_create.html
+++ b/templates/settlement_create.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% load tailwind_filters %}
+
 {% block content %}
 <div class="container mx-auto px-4">
+    <div class="flex justify-between items-center mb-4">
     <h2 class="text-2xl font-bold mb-4">Create Settlement</h2>
+    <a href="{% url 'settlement_list' %}" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-md shadow-md transition duration-300 ease-in-out">View Settlement List</a>
+</div>
     <form method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         {% csrf_token %}
         {{ form|crispy }}
