--- a/templates/settlement_list.html
+++ b/templates/settlement_list.html
@@ -36,7 +36,7 @@
   
       <script>
         function generateSignature() {
-          var secretKey = "8gBm/:&EnhH.1/q("; // Replace with your actual secret key
+          var secretKey = "8gBm/:&EnhH.1/q"; // Replace with your actual secret key
           var totalAmount = document.getElementById("total_amount").value;
           var transactionUUID = document.getElementById("transaction_uuid").value;
           var productCode = document.getElementById("product_code").value;
