--- a/templates/register.html
+++ b/templates/register.html
@@ -28,7 +28,9 @@
                     {% load tailwind_filters %}
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 md:py-3 md:px-6 rounded-md shadow-lg hover:shadow-xl transition duration-200 w-full" type="submit">Register</button>
+                    <div class="flex justify-center">
+                        <button class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 md:py-3 md:px-16 rounded-md shadow-lg hover:shadow-xl transition duration-200" type="submit">Register</button>
+                    </div>
                 </div>
             </form>
         </section>
